--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <!-- substitua os elementos não semânticos por elementos semânticos -->
-  <div id="recipiente">
+  <container id="recipiente">
     <div id="cabecalho">
       <h1>Lanchonete do Coral 55</h1>
-      <h2>O melhor açaí marítimo da região</h2>
+      <h2>O melhor <roxo class="roxo">açaí</roxo> marítimo da região</h2>
     </div>
     <div id="conteudo">
       <div id="lateral">
@@ -44,7 +44,7 @@
     <div id="rodape">
       <img src="images/cartoes.png" alt="Formas de pagamento: Visa e Masterard">
     </div>
-  </div>
+  </container>
   <div id="ticket">
     <img src="images/ticket.png" alt="Cupom de desconto">
   </div>
