--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <!-- substitua os elementos não semânticos por elementos semânticos -->
-  <container id="recipiente">
+  <div id="recipiente">
     <div id="cabecalho">
       <h1>Lanchonete do Coral 55</h1>
       <h2>O melhor <roxo class="roxo">açaí</roxo> marítimo da região</h2>
@@ -44,7 +44,7 @@
     <div id="rodape">
       <img src="images/cartoes.png" alt="Formas de pagamento: Visa e Masterard">
     </div>
-  </container>
+  </div>
   <div id="ticket">
     <img src="images/ticket.png" alt="Cupom de desconto">
   </div>
